--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -1,4 +1,4 @@
-# .github/workflows/deploy.yml
+# GitHub Actions workflow: build with craco and deploy with gh-pages
 name: Build and deploy to GitHub Pages
 on:
   push:
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -29,7 +31,7 @@ jobs:
 
       - name: Configure git user for commits
         run: |
-          # set both global git config and local repo config to be safe
+          # set both global and repo-local identity to ensure child git processes have an identity
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config user.name "${{ github.actor }}"
@@ -37,9 +39,9 @@ jobs:
 
       - name: Deploy to GitHub Pages (gh-pages)
         env:
-          # gh-pages reads GH_TOKEN to authenticate when pushing the gh-pages branch
+          # allow gh-pages CLI to authenticate and push
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # ensure git child processes have an identity
+          # ensure any git child processes have author/committer info
           GIT_AUTHOR_NAME: ${{ github.actor }}
           GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
           GIT_COMMITTER_NAME: ${{ github.actor }}
