--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -1,4 +1,5 @@
-# GitHub Actions workflow: build with craco and deploy with gh-pages
+# GitHub Actions workflow: build with craco and deploy to GitHub Pages
+# This version uses peaceiris/actions-gh-pages to avoid gh-pages CLI credential issues.
 name: Build and deploy to GitHub Pages
 on:
   push:
@@ -7,6 +8,7 @@ on:
 
 permissions:
   contents: write
+  pages: write
 
 jobs:
   build-and-deploy:
@@ -29,21 +31,9 @@ jobs:
       - name: Build (craco)
         run: npm run build
 
-      - name: Configure git user for commits
-        run: |
-          # set both global and repo-local identity to ensure child git processes have an identity
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-
-      - name: Deploy to GitHub Pages (gh-pages)
-        env:
-          # allow gh-pages CLI to authenticate and push
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # ensure any git child processes have author/committer info
-          GIT_AUTHOR_NAME: ${{ github.actor }}
-          GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
-          GIT_COMMITTER_NAME: ${{ github.actor }}
-          GIT_COMMITTER_EMAIL: ${{ github.actor }}@users.noreply.github.com
-        run: npm run deploy
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          # optional: publish_branch: gh-pages
