--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://valeriu9.github.io/madame_cristina_v2_built_with_react",
+  "homepage": "https://www.madamecristina.dk",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
